# sovereign-sdk

./: .gitignore  .mailmap  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PHILOSOPHY.md  README.md  ROADMAP.md  SECURITY.md  example.env  main.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
.keys/: sovereign_identity.pem  sovereign_identity.pub
examples/fastapi_gateway/: app.py  client.py
