[project]
name = "sovereign-sdk-workspace"
version = "0.1.0"
description = "Monorepo workspace for Sovereign System components"
requires-python = ">=3.12"
authors = [
    { name = "kenwalger", email = "kenalger@comcast.net" }
]


[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
dev-dependencies = [
    "sovereign-core",
    "sovereign-runtime",
]

# This block tells uv to resolve these dev-dependencies locally
[tool.uv.sources]
sovereign-core = { workspace = true }
sovereign-runtime = { workspace = true }