[project]
name = "sovereign-sdk-workspace"
version = "0.1.0"
description = "Monorepo workspace for Sovereign System components"
requires-python = ">=3.12"
authors = [
    { name = "kenwalger", email = "kenalger@comcast.net" }
]


[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
    "sovereign-core",
    "sovereign-runtime",
    "sovereign-fastapi",
]

# This block tells uv to resolve these dev-dependencies locally
[tool.uv.sources]
sovereign-core = { workspace = true }
sovereign-runtime = { workspace = true }
sovereign-fastapi = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["packages"]
addopts = "--import-mode=importlib"
